<resources>
    <string name="app_name">TrafficScotland - S2024472</string>
    <string name="dateSelectBtn">Get Feed</string>
    <string name="road">Road</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="current_roadworks">Roadworks</string>
    <string name="planned_roadworks">Planned Roadworks</string>
    <string name="current_incidents">Current Incidents</string>
    <string name="enter_a_road_or_date">Enter a Road or Date?</string>
    <string name="none">None</string>

    <string name="traffic_act_road_label">Road:</string>
    <string name="traffic_act_link_label">Link:</string>
    <string name="geo_co_ordinates">Geo Co-Ordinates:</string>
    <string name="publish_date">Publish Date:</string>
    <string name="roadworks_length_in_days">Roadworks length in days:</string>
    <string name="description">Description:</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_results">No Results</string>
</resources>