<?xml version="1.0" encoding="utf-8"?>
<!--
    Name: Joshua Campbell
    Matric No: S2024472
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RssDataActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <ImageView
            android:id="@+id/traffic_act_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_act_road_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_title"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_desc"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_start_date"
                style="@style/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/traffic_act_end_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_end_date"
                style="@style/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_link_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_act_link_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_link"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_geo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geo_co_ordinates"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_geo"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_pub_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_pub"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/traffic_act_road_ln_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roadworks_length_in_days"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/traffic_act_road_ln"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>